<resources>
    <!--
        GLOBAL
    -->
    <string name="app_name">Nubank UI</string>
    <string name="title">Nubank UI</string>

    <!--
        DIALOG
    -->
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="global_ok">OK</string>
    <string name="global_cancel">Cancel</string>

    <!-- Main activity -->
    <string name="main_bank_name">Banco <b>260 - Nu Pagamentos S.A.</b></string>
    <string name="main_agency">Agência <b>%d</b></string>
    <string name="main_account_number">Conta <b>%s</b></string>
    <string name="main_account_logout">Sair da conta</string>

    <!-- Main Menu Options -->
    <string name="main_menu_option_help_me">Me ajuda</string>
    <string name="main_menu_option_profile">Perfil</string>
    <string name="main_menu_option_profile_secondary">Nome de preferência, telefone, e-mail</string>
    <string name="main_menu_option_account_configure">Configurar conta</string>
    <string name="main_menu_option_card_configure">Configurar Cartão</string>
    <string name="main_menu_option_ask_pj_account">Pedir conta PJ</string>
    <string name="main_menu_option_app_configurations">Configurações do app</string>
    <string name="global_credit_card">Cartão de crédito</string>
    <string name="example_payment_description">Compra mais recente em XXXXX no valor de R$ 28,98 quinta</string>
    <string name="fragment_credit_card_current_invoice">Fatura atual</string>
</resources>
