<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_nu_symbol_offwhite"
        app:layout_constraintEnd_toStartOf="@id/text_view_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="William"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/image_view_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_view_logo"
        app:layout_constraintTop_toTopOf="@id/image_view_logo"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/image_view_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_logo" />

    <ImageView
        android:id="@+id/image_view_qrcode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/qrcode"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_arrow"
        app:layout_constraintWidth_percent="0.30" />

    <TextView
        android:id="@+id/text_view_bank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_bank_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_qrcode" />

    <TextView
        android:id="@+id/text_view_agency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_agency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_bank_name" />

    <TextView
        android:id="@+id/text_view_account_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_account_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_agency" />

    <View
        android:id="@+id/first_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_marginEnd="@dimen/spacing_24"
        android:background="@drawable/line_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_account_number" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_main_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginEnd="@dimen/spacing_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_divider"
        tools:listitem="@layout/vh_main_option" />
</androidx.constraintlayout.widget.ConstraintLayout>